--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,6 +6,8 @@
     --normal-font-size: 0.938rem;
   }
 
+
+
   @media screen and (max-width: 750px) {
     .svg-column {
       float: left;
@@ -16,6 +18,7 @@
       width: 100%;
     }
   }
+
   
 body {
     margin: var(--header-height) 0 0 0;
@@ -57,6 +60,10 @@ body {
   .beige-background {
     margin-top: 100px;
     background: #f3ebeb;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; */
   }
 
   .nav-icon {
@@ -156,7 +163,6 @@ body {
   }
 
   /* capybara image */
-
   .border1 {
     position: absolute;
     top: 66%;
@@ -165,6 +171,14 @@ body {
     float: right;
     width: 15%;
     box-sizing: border-box;
+  }
+
+  .button {
+    display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
   }
 
   .button-container {
@@ -184,6 +198,39 @@ body {
     font-size: 16px;
   }
 
+  .flex-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-top: 50px;
+  }
+
+  .text-experience {
+    flex: 1; 
+    min-width: 300px; 
+    padding: 20px;
+    box-sizing: border-box;
+  }
+
+  .experience-item {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+  }
+
+.company-name {
+    margin-left: 110px;
+    font-weight: bold;
+  }
+
+.work-date {
+    font-style: italic;
+  }
+
+  .experience-text {
+    margin-left: 110 px
+  }
+
   .green-text {
     color: #a1c0a7;
   font-weight: bold;
@@ -195,6 +242,7 @@ body {
     font-size: 16px;
     font-style: italic;
   }
+
 
   .projects-container {
     display: flex;
@@ -220,7 +268,11 @@ body {
   }
 
   .socials-icons {
-    padding-top: 25px;
+    /* flex: 0 0 30%;
+    max-width: 30%; */
+    /* padding-left: 20px; */
+    /* padding-left: 500px; */
+    padding-top: 20px;
     font-size: 50px;
     float: right;
   }
@@ -239,7 +291,7 @@ body {
 .projects-text {
     flex: 1;
     max-width: 35%;
-    padding-left: 19px;
+    padding-left: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -251,7 +303,7 @@ body {
 
 .projects-text p {
     margin-top: -10px;
-} 
+}
 
 
 
